--- a/benches/Cargo.toml
+++ b/benches/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "day3"
+name = "benches"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-
-[lib]
-path = "src/main.rs"
-
 [dependencies]
+
+day1 = { path = "../day1" }
+day2 = { path = "../day2" }
+day3 = { path = "../day3" }
+day4 = { path = "../day4" }
+day5 = { path = "../day5" }
